data/derived/comb/progs/unify/prog7087.ml.out
Characters 131-135:
  List.fold_left fx base l;;
                    ^^^^
Error: This expression has type string but an expression was expected of type
         'a list
